--- a/rocro.yml
+++ b/rocro.yml
@@ -2,31 +2,36 @@ inspecode:
 
   astyle:
     auto-fix: true
-    thresholds: { num-issues: 999 }
+    thresholds: { num-issues: 71 }
 
   checkstyle:
     auto-fix: true
-    thresholds: { num-issues: 999 }
+    thresholds: { num-issues: 999 }   # FIXME: too many issues detected: 4453 > 1000
 
   cpd:
+    options:
+      --skip-lexical-errors:
     thresholds: { num-issues: 999 }
 
   grep:
-    thresholds: { num-issues: 999 }
+    thresholds: { num-issues: 17 }
 
-  infer:
-    thresholds: { num-issues: 999 }
+  ##----------------------------------------------------------------
+  ##  FAILURE: Build failed with an exception.
+  ##----------------------------------------------------------------
+  #infer:
+  #  thresholds: { num-issues: 999 }
 
   jscpd:
-    thresholds: { num-issues: 999 }
+    thresholds: { num-issues: 0 }
 
   misspell:
     auto-fix: true
-    thresholds: { num-issues: 999 }
+    thresholds: { num-issues: 1 }
 
   pmd:
     auto-fix: true
-    thresholds: { num-issues: 999 }
+    thresholds: { num-issues: 0 }
 
   swiftlint:
     auto-fix: true
