--- a/rocro.yml
+++ b/rocro.yml
@@ -40,7 +40,7 @@ inspecode:
     thresholds: { num-issues: 626 }
 
   tailor:
-    thresholds: { num-issues: 999 }
+    thresholds: { num-issues: 999 }   # too many issues detected: 1069 > 1000
 
   uncrustify:
     auto-fix: true
