--- a/rocro.yml
+++ b/rocro.yml
@@ -1,50 +1,7 @@
 inspecode:
 
-  astyle:
-    auto-fix: true
-    thresholds: { num-issues: 71 }
-
-  checkstyle:
-    #config-file: checkstyle.xml      # (auto-detect)
-    auto-fix: true
-    thresholds: { num-issues: 848 }
-
-  cpd:
-    options:
-      --skip-lexical-errors:
-    thresholds: { num-issues: 22 }
-
-  grep:
-    thresholds: { num-issues: 17 }
-
-  ##----------------------------------------------------------------
-  ##  FAILURE: Build failed with an exception.
-  ##----------------------------------------------------------------
-  #infer:
-  #  thresholds: { num-issues: 999 }
-
-  jscpd:
-    thresholds: { num-issues: 131 }
-
-  misspell:
-    auto-fix: true
-    thresholds: { num-issues: 1 }
-
-  pmd:
-    auto-fix: true
-    thresholds: { num-issues: 0 }
-
-  swiftlint:
-    #config-file: .swiftlint.yml      # (auto-detect)
-    auto-fix: true
-    thresholds: { num-issues: 626 }
-
   tailor:
-    thresholds: { num-issues: 999 }   # too many issues detected: 1069 > 1000
-
-  uncrustify:
-    auto-fix: true
-    thresholds: { num-issues: 108 }
-
-  unused:
-    thresholds: { num-issues: 240 }
+  - ignore: src/test/swift/com/sleekbyte/tailor/grammer
+    thresholds: { num-issues: 999 }
+  - input:  src/test/swift/com/sleekbyte/tailor/grammer
+    thresholds: { num-issues: 999 }
