--- a/rocro.yml
+++ b/rocro.yml
@@ -5,13 +5,13 @@ inspecode:
     thresholds: { num-issues: 71 }
 
   checkstyle:
-    #config-file: checkstyle.xml      # (auto-detect)
+    # config-file: checkstyle.xml      # (auto-detect)
     auto-fix: true
     thresholds: { num-issues: 848 }
 
   clang-format:
     auto-fix: true
-    thresholds: { num-issues: 999 }
+    thresholds: { num-issues: 108 }
 
   cpd:
     options:
@@ -22,7 +22,7 @@ inspecode:
   #   thresholds: { num-issues: 999 }
 
   fossology:
-    thresholds: { num-issues: 999 }
+    thresholds: { num-issues: 12 }
 
   grep:
     thresholds: { num-issues: 17 }
@@ -30,8 +30,8 @@ inspecode:
   ##----------------------------------------------------------------
   ##  FAILURE: Build failed with an exception.
   ##----------------------------------------------------------------
-  #infer:
-  #  thresholds: { num-issues: 999 }
+  # infer:
+  #   thresholds: { num-issues: 999 }
 
   jscpd:
     thresholds: { num-issues: 131 }
@@ -44,11 +44,11 @@ inspecode:
     auto-fix: true
     thresholds: { num-issues: 0 }
 
-  spotbugs:
-    thresholds: { num-issues: 999 }
+  # spotbugs:
+  #   thresholds: { num-issues: 999 }
 
   swiftlint:
-    #config-file: .swiftlint.yml      # (auto-detect)
+    # config-file: .swiftlint.yml      # (auto-detect)
     auto-fix: true
     thresholds: { num-issues: 626 }
 
