--- a/rocro.yml
+++ b/rocro.yml
@@ -1,66 +1,7 @@
 inspecode:
 
-  astyle:
-    auto-fix: true
-    thresholds: { num-issues: 71 }
-
-  checkstyle:
-    # config-file: checkstyle.xml      # (auto-detect)
-    auto-fix: true
-    thresholds: { num-issues: 848 }
-
-  clang-format:
-    auto-fix: true
-    thresholds: { num-issues: 108 }
-
-  cpd:
-    options:
-      --skip-lexical-errors:
-    thresholds: { num-issues: 22 }
-
-  # fortify:
-  #   thresholds: { num-issues: 999 }
-
-  fossology:
-    thresholds: { num-issues: 12 }
-
-  grep:
-    thresholds: { num-issues: 17 }
-
   ##----------------------------------------------------------------
-  ##  FAILURE: Build failed with an exception.
+  ##  FAILURE: Build failed with an exception. (codelift#1729)
   ##----------------------------------------------------------------
-  # infer:
-  #   thresholds: { num-issues: 999 }
-
-  jscpd:
-    thresholds: { num-issues: 131 }
-
-  misspell:
-    auto-fix: true
-    thresholds: { num-issues: 1 }
-
-  pmd:
-    auto-fix: true
-    thresholds: { num-issues: 0 }
-
-  # spotbugs:
-  #   thresholds: { num-issues: 999 }
-
-  swiftlint:
-    # config-file: .swiftlint.yml      # (auto-detect)
-    auto-fix: true
-    thresholds: { num-issues: 626 }
-
-  tailor:
-  - ignore: src/test/swift/com/sleekbyte/tailor/grammar/
-    thresholds: { num-issues: 807 }
-  - input:  src/test/swift/com/sleekbyte/tailor/grammar/
-    thresholds: { num-issues: 262 }
-
-  uncrustify:
-    auto-fix: true
-    thresholds: { num-issues: 108 }
-
-  unused:
-    thresholds: { num-issues: 240 }
+  infer:
+    thresholds: { num-issues: 999 }
